# treesitter-mcp

./: AGENTS.md  Cargo.toml  README.md  flake.nix
.claude/skills/run-treesitter-mcp/: SKILL.md  driver.sh
src/analysis/: call_graph.rs  code_map.rs  dependencies.rs  diff.rs  file_shape.rs  find_usages.rs  minimal_edit_context.rs  shape.rs  symbol_at_line.rs  usage_counter.rs  view_code.rs
src/extraction/: type_tests.rs  types.rs
src/parser/: mod.rs
tests/: haskell_language_test.rs
