[package]
name = "treesitter-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
# MCP SDK
# rust-mcp-sdk = { version = "0.8.1", default-features = false, features = ["server", "macros", "stdio", "2025_06_18"] }
rust-mcp-sdk = { version = "0.8.1",  features = ["server", "macros", "stdio"] }
async-trait = "0.1"
url = { version = "2.5.8", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tree-sitter core
tree-sitter = "0.26"
streaming-iterator = "0.1"

# Language grammars
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-swift = "0.7"
tree-sitter-c-sharp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-haskell = "0.23"

# Error handling
eyre = "0.6"
color-eyre = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
walkdir = "2.4"
globset = "0.4.18"
regex = "1.10"
tiktoken-rs = "0.6"
tree-sitter-go = "0.23"

[dev-dependencies]
tempfile = "3.8"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parse_bench"
harness = false

[[bench]]
name = "find_usages_bench"
harness = false

[[bench]]
name = "dependency_resolution_bench"
harness = false
